Different color of copyrights fix

--- a/Conowego.html
+++ b/Conowego.html
@@ -60,7 +60,8 @@ h1 {color: white;}
 h2 {color: white;}
 p {color: white;}
 li {color: white;}
-a:link { color: #0076C5}</style>
+a:link { color: #0076C5}
+#topic_footer_content {color: #fff;}</style>
 
 
 
@@ -1601,11 +1602,11 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6"></span><br/><span class="rvts6">Brak listy.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-
+<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Full-featured Help generator</a></p>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; 2012 - 17 by Bakura. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; 2012 - 20 by Bakura. All Rights Reserved.</div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
