--- a/Tworzeniepodzialukaraoke.html
+++ b/Tworzeniepodzialukaraoke.html
@@ -60,7 +60,8 @@ h1 {color: white;}
 h2 {color: white;}
 p {color: white;}
 li {color: white;}
-a:link { color: #0076C5}</style>
+a:link { color: #0076C5}
+#topic_footer_content {color: #fff;}</style>
 
 
 
@@ -229,7 +230,7 @@ a:link { color: #0076C5}</style>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; 2012 - 17 by Bakura. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; 2012 - 20 by Bakura. All Rights Reserved.</div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
