Help for release build 1138

--- a/Conowego.html
+++ b/Conowego.html
@@ -192,6 +192,28 @@ a:link { color: #0076C5}
                 
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Co nowego?</span></span></h1>
+<p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.5.1138</span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawka otwierania wielu plików z eksploratora.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany zapis sesji po części crashów.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana opcja wczytywania poprzedniej sesji na starcie i zapytanie o wczytanie poprzedniej sesji.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione wyświetlanie nazw języków.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana zmiana czcionki dla całego programu.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione działanie strzałek zakładek i zamienione wielokropki na zanikanie.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane wielowątkowe szukanie i zmienianie w wielu zakładkach i w plikach folderu.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana obsługa czcionek instalowanych dla jednego użytkownika z nowych wersji Windows10.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane tworzenie i edycja profili w polu przesuwania czasów.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany własny pasek postępu.</span></li>
+<li class="rvps2"><span class="rvts6">Zminimalizowane mruganie przy zmianie zakładek i włączaniu postprocessora na Windows 10.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawka nie działającego cofania i przywracania dla porównywarki.</span></li>
+<li class="rvps2"><span class="rvts6">Blokowanie narzędzi edycji wizualnej wideo, gdy w polu edycji jest wyświetlana linijka z podglądu napisów.</span></li>
+<li class="rvps2"><span class="rvts6">Przyspieszenie dla pola napisów i pola tekstowego, gdy linie są bardzo długie, obecnie potrafi nawet wyświetlić milion znaków.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawka okna błędów / ostrzeżeń / informacji by pojawiały się na oknie głównym, nie znikały pod spodem.</span></li>
+<li class="rvps2"><span class="rvts6">Zwiększenie maksymalnej ilości przycisków tagów do 20.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione różne elementy okna, by przy czcionce o rozmiarze większym niż 100% wyglądały dobrze.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
 <p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.5.1104</span></p>
 <p class="rvps2"><span class="rvts14"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
