--- a/Credits.html
+++ b/Credits.html
@@ -222,7 +222,7 @@ a:link { color: #0076C5}
 </ul>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <p class="rvps6"><span class="rvts19">Podziękowania</span><span class="rvts6">&nbsp;dla osób które używają programu i od czasu do czasu coś wynajdowali.</span></p>
-<p class="rvps6"><span class="rvts6">BadRequest, Ognisty321, Nyah2211, dark, Ksenoform, Zły Los, Vessin, Xandros.</span></p>
+<p class="rvps6"><span class="rvts6">Wtas, BadRequest, Ognisty321, Nyah2211, dark, Ksenoform, Zły Los.</span></p>
 <p></p>
 <p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/create-epub-ebooks">Write EPub books for the iPad</a></p>
 
