--- a/NajczesciejzadawanepytaniaFAQ.html
+++ b/NajczesciejzadawanepytaniaFAQ.html
@@ -61,7 +61,8 @@ h2 {color: white;}
 p {color: white;}
 li {color: white;}
 a:link { color: #0076C5}
-#topic_footer_content {color: #fff;}</style>
+#topic_footer_content {color: #fff;}
+.rvts26{color:white}</style>
 
 
 
@@ -194,7 +195,7 @@ a:link { color: #0076C5}
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Najczęściej zadawane pytania</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego przy próbie otwarcia programu jest napisane, że brakuje pliku dll?</span></li>
+<li style="list-style-image: url('lib/6.bmp')" class="rvps6"><span class="rvts17">Dlaczego przy próbie otwarcia programu jest napisane, że brakuje pliku dll?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">W przypadku Windowsa7 w DirectX brakuje części plików, wystarczy użyć </span><a class="rvts18" href="https://www.microsoft.com/en-us/download/details.aspx?id=35&44F86079-8679-400C-BFF2-9CA5F2BCBDFC=1">instalatora sieciowego.</a></li>
@@ -203,14 +204,14 @@ a:link { color: #0076C5}
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otwarciu Kainote dostaję informację, że nie udało się wczytać skrótów klawiszowych i program zostanie zamknięty?</span></li>
+<li style="list-style-image: url('lib/6.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otwarciu Kainote dostaję informację, że nie udało się wczytać skrótów klawiszowych i program zostanie zamknięty?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Przyczyny mogą być dwie, od poprzedniej wersji zmieniły się użyte skróty klawiszowe i wystarczy tylko usunąć plik Hotkeys.txt i AudioHotkeys.txt.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otwarciu wideo mam zieloną / różową plamę?</span></li>
+<li style="list-style-image: url('lib/6.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otwarciu wideo mam zieloną / różową plamę?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Przyczyną są kodeki Microsoftu, wystarczy je zmienić, instalując inne, najlepiej K-lite bądź gdy już jakieś mamy zainstalować </span><a class="rvts18" href="http://www.programosy.pl/program,preferred-filter-tweaker.html" target="_blank">Win7DSFilterTweaker</a><span class="rvts6">&nbsp;i wybrać dla h264 inny codec niż Microsoftu.</span></li>
@@ -218,14 +219,14 @@ a:link { color: #0076C5}
 </ul>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Jak zmienić wielkość wideo?</span></li>
+<li style="list-style-image: url('lib/6.bmp')" class="rvps6"><span class="rvts17">Jak zmienić wielkość wideo?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Wystarczy najechać myszą między okno wideo a pole napisów i przeciągnąć, bądź kliknąć w wideo i użyć rolki myszy.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego w programie nie ma tego czy tamtego?</span><span class="rvts6">&nbsp;</span></li>
+<li style="list-style-image: url('lib/6.bmp')" class="rvps6"><span class="rvts17">Dlaczego w programie nie ma tego czy tamtego?</span><span class="rvts6">&nbsp;</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Jeszcze nikt nie zgłosił mi, sugestii dotyczącej danej funkcji, możesz być pierwszy.</span></li>
