--- a/Edycjastylow.html
+++ b/Edycjastylow.html
@@ -61,7 +61,8 @@ h2 {color: white;}
 p {color: white;}
 li {color: white;}
 a:link { color: #0076C5}
-#topic_footer_content {color: #fff;}</style>
+#topic_footer_content {color: #fff;}
+.rvts26{color:white}</style>
 
 
 
