Added whats new for public release 1292

--- a/Conowego.html
+++ b/Conowego.html
@@ -193,6 +193,66 @@ a:link { color: #0076C5}
                 
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Co nowego?</span></span></h1>
+<p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.7.1292</span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawka crasha wykresu falowego przy rozciąganiu okna z włączonym wideo.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawki powiększenia wideo w połączeniu z narzędziami edycji wizualnej.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana obsługa katalogów czcionek.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawka nie działających "Otwórz napisy" i "Otwórz wideo" z menu kontekstowego wideo.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany zapis ścieżki audio i klatek kluczowych do ostatniej sesji.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawki postprocessora.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawione złe zaznaczanie okna zaznacz linijki.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawione niewidoczne pole tekstowe po wczytaniu samego audio.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawki wyłączania poszczególnych elementów menu i paska narzędzi.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony crash, gdy aktywna linia przekroczy tablicę napisów.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawione znikające napisy podczas używania narzędzia wizualnego wycinków i rysunków wektorowych,</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6">gdy używany jest renderer Libass.</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Naprawiony źle działający shift w narzędziu wizualnym skali, gdy został wciśnięty zbyt późno, bądź zwolniony zbyt wcześnie.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiona rzadka zwiecha statycznego tekstu.</span></li>
+<li class="rvps2"><span class="rvts6">Skalowanie okna programu, gdy zostaje przeniesione na ekran z innym DPI (Windows 8.1 i 10).</span></li>
+<li class="rvps2"><span class="rvts6">Zablokowane tworzenie folderu bądź pliku zip, gdy napisy, bądź wideo MKV nie mają czcionek.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione możliwa zwiecha, gdy skrypt Lua użyje otwierania okna otwierania pliku, bądź zapisu pliku.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione przenoszenie tagów z oryginału do tłumaczenia.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawiona stała grubość pasków przesuwania, paska postępu wideo, przycisków przenoszenia stylów oraz obcięte koordynaty w domyślnym narzędziu wizualnym.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony crash po wczytaniu napisów, kiedy narzędzia wizualne są wyłączone.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony brak wyłączania narzędzi wizualnych przy innych formatach niż ASS.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawione puste linie w oknie wyników szukania, gdy tekst jest zbyt długi.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiona zła aktualizacja kolorów motywu, gdy brakowało w nim kolorów.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawki dla okna sprawdzania pisowni.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawki dla widoku samego wideo.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony crash po zmianie napisów podczas odtwarzania audio bądź wideo i audio.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawki listy tagów w polu tekstowym dialogu.</span></li>
+<li class="rvps2"><span class="rvts6">Ulepszone dzielenie linii w pozostałych wielolinijkowych polach tekstowych.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione dzielenie linii w polu tekstowym edycji dialogów i koloryzjacja template.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane łamania linii do pola napisów.</span></li>
+<li class="rvps2"><span class="rvts6">Ulepszony podział słów dla sprawdzania pisowni.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione złe pokazywanie etykietek suwaków audio.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawiony brak rysowania obwódki aktywnej zakładki po zmianie wielkości okna, </span></li>
+</ul>
+<p class="rvps2"><span class="rvts6">gdy są widoczne dwie zakładki.</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Złe wstawianie linii podzielonych "\r\n".</span></li>
+<li class="rvps2"><span class="rvts6">Dodana obsługa macierzy kolorów wideo przez Direct Show.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawka braku zmiany macierzy kolorów wideo na TV.601.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana obsługa Libassa przez Direct Show.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany podgląd czcionki na liście w oknie edycji stylów.</span></li>
+<li class="rvps2"><span class="rvts6">Aktualizacja Libassa i poprawiony brak odświeżania po zmianie czcionki.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawione tworzenie wielu tych samych tagów przy użyciu narzędzi wizualnych, </span></li>
+</ul>
+<p class="rvps2"><span class="rvts6">gdy kursor znajdował się między dwoma nawiasami klamrowymi.</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Naprawione niechciane zaznaczanie tekstu w polach tekstowych okna szukania.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony crash po zamknięciu ostatniej zakładki.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany zapis czcionki pola tekstowego edycji dialogów.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony zwiecha po naprawie crasha spowodowanego przez szukanie z innego wątku.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane wielolinijkowe tworzenie rysunków i clipów wektorowych.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany zapis pozycji suwaków audio po użyciu rolki myszy.</span></li>
+<li class="rvps2"><span class="rvts6">Zmienione skalowanie poziome spektrum audio, by skala była niezależna od szerokości okna.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
 <p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.7.1211</span></p>
 <p class="rvps2"><span class="rvts14"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
