Whats new for public release 1397

--- a/Conowego.html
+++ b/Conowego.html
@@ -193,6 +193,48 @@ a:link { color: #0076C5}
                 
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Co nowego?</span></span></h1>
+<p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.7.1397</span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane okno otwierania plików auto zapisu.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane otwieranie ostatniej sesji po każdym crashu.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana możliwość ustawienia skrótu do otwierania pełnego ekranu.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane okno do usuwania plików tymczasowych, indeksów, audio cache, auto zapisu.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane dummy video i blank audio.</span></li>
+<li class="rvps2"><span class="rvts6">Płynniejsze odtwarzanie wideo przez FFMS2.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana koloryzacja \N i kodu rysunków wektorowych.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawki postprocessora.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana obsługa obrotów z przy edycji rysunków wektorowych.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawiona obsługa tab i shift+tab we wszystkich oknach.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony crash podczas używania narzędzia wizualnego krzyża przy odtwarzaniu wideo.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony crash przy instalacji nowej czcionki, gdy okno dialogowe wyboru czcionek zostało włączone.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane narzędzie wizualne do obsługi pozostałych tagów z opcją edycji.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane resetowanie tagów dla zaznaczonych tekstów dla wszystkich narzędzi pola edycji </span></li>
+</ul>
+<p class="rvps2"><span class="rvts6">dla tagów wstawianych w miejsce kursora.</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane narzędzie obrotów Z do odczytu obrotów z dwóch punktów podobne do "clip to frz".</span></li>
+<li class="rvps2"><span class="rvts6">Dodane narzędzie obrotów Z obracania całej sekwencji pozwalające obrócić wiele rysunków jednocześnie, </span></li>
+</ul>
+<p class="rvps2"><span class="rvts6">by pozycje między nimi nie uległy zmianie. Obsługuje również tag clip.</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane narzędzie skali do odczytu skali z prostokąta.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane narzędzie skali do skalowania sekwencji pozwalające zeskalować wiele rysunków jednocześnie,</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6">by pozycje między nimi nie uległy zmianie. Obsługuje również tag clip.</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane narzędzie pozycjonowania do ustawiania pozycji według prostokąta i wybranego położenia.</span></li>
+<li class="rvps2"><span class="rvts6">Dodane narzędzie ruchu odczytujące ruch z dwóch punktów i pozycji wideo.</span></li>
+<li class="rvps2"><span class="rvts6">Usunięte narzędzie skali i obrotów oraz przeniesione te możliwości dla poszczególnych narzędzi skali i obrotów.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany odczyt pozycji wielu linijek bez tagu \pos.</span></li>
+<li class="rvps2"><span class="rvts6">Dodany obrys rysunków i wycinków wektorowych w narzędziu zmieniacz pozycji.</span></li>
+<li class="rvps2"><span class="rvts6">Dodana lista gotowych rysunków wektorowych rysowanych przez przeciąganie z możliwością dodawania własnych rysunków.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony nie działające powiększenie na wideo wczytanym przez direct show.</span></li>
+<li class="rvps2"><span class="rvts6">Aktualizacja Luajit.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawka wklejania i kopiowania dla innych formatów niż ASS.</span></li>
+<li class="rvps2"><span class="rvts6">Naprawiony crash kiedy wideo jest zamknięte a nowe nie zostało jeszcze wczytane.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.7.1292</span></p>
 <p class="rvps2"><span class="rvts14"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
@@ -1734,7 +1776,7 @@ a:link { color: #0076C5}
 <p class="rvps2"><span class="rvts6"></span><br/><span class="rvts6">Brak listy.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Full-featured Help generator</a></p>
+
 
             </div>
             
